--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,65 +8,79 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        <nav>
-            <ul id="accueil">
-                <li><a href="">Accueil</a></li>
-                <li><a href="">A Propos</a></li>
-                <li><a href="C:\xampp\htdocs\brief_projetcomplet\Untitled-service.html">Services</a></li>
-                <li><a href="C:\xampp\htdocs\brief_projetcomplet\Axes.html">Axes</a></li>
-                <li><a href="">Contacts</a></li>
-            </ul>
-            <div class="img"><img src="NOUR-TRANSPORT-VOYAGEURS.jpg" alt=""></div>
-        </nav>
-        <div id="car">
-            <img src="transport-bus-3.jpg" alt="">
-        </div >
-        <div id="p"> <h2>Bienvenue à Vous !</h2> <h3>à Nour Transport Voyageurs</h3><p> Nous investissons énormément dans les équipements de dernières générations et dans les technologies de l’information et de la communication dans le but de vous apporter assurance, confort et sécurité pour tous vos projets de voyages, de transport de marchandises, de location de bus.            
-        </p></div>
-        <div id="images">
-            <img src="Africa_Mali_French_2017_Output.jpg" alt="" width="24%">
-            <img src="152.jpg" alt="" width="25%">
-            <img src="jalapao-02.webp" alt="" width="18%">
-            <img src="Mali_0537_1536x1024.jpg" alt="" width="15%">
-        </div>
-        <div id="chif">
-            <h2>Nos chiffres</h2>
-            <h4>100+
-                <p>Bus</p>
-                </h4>
-                <h4>50+
-                    <p>Destinations</p>
-                </h4>
-                <h4>900+
-                    <p>Personnels</p>
-                </h4>
-        </div>
-        <div id="images2">
-            <h2>
-                <p class="btp">BTP</p>
-            <p class="carb">Carburant</p>
-            <p class="com">Commerces</p>
-        </h2>
-                <img src="R.jpg" width="22%" alt="">
-                <img src="R (1).jpg" alt="" width="25%">
-                <img src="Ecommerce.jpg" alt="" width="28%">
-                <h3>Nos Autres Services</h3>
-            </div>
-        <div id="pied1">
-            PAIEMENT<hr>
-            <img src="télécharger (1).jpg" alt="" width="7%"> 
-        </div>
-    <div id="pied2">
-        DERNIERES ACTUS <hr>
-        <img src="R (2).jpg" alt="" width="7%">
+  <div class="bloc1">
+    Réservation  par téléphone:   (+223) 74 00 4747
+  </div>
+   <div class="plane">
+     <li><img src="nour.jpg" width="99px" height="98px" alt=""></li>
+     <li> A PROPOS</li>
+     <li> SERVICES</li>
+     <li> AXES ROUTIERS</li>
+     <li> CONTACT</li> 
     </div>
-    <div id="pied3">
-        CVG & CONFIDENTIALITE <hr> <p>Conditions Générales        
-        </p> <p>Confidentialités et Cookies</p>
+  
+  
+  <div class="societe">
+    LA SOCIETE
+  </div>
+  
+    <img src="Bus2.jfif" width="50%" height="600px" alt="" class="accueil1">
+    
+    <div class="texte">
+      <H4>Comme son nom l’indique, NOUR « Lumière » en français, <br> 
+        la société NOUR TRANSPORT VOYAGEURS SARL a été créée en 2014 <br>
+        dans le but d’éclairer, de faciliter, d’apporter un changement dynamique et <br>
+        positif dans les politiques de développement du secteur privé au Mali et dans la sous-région Ouest Africaine. <br>
+        Elle est une société de droit commun qui a pour vocation : <br> le transport des personnes, des biens et services, 
+        les locations et les ventes de véhicules de tous genres. <br> Et à cette activité s’ajoute celles du Commerce Général (Commerce de thé et autres marchandises) <br> et les BâtimentsTravaux Publics et Particuliers et les Forages.
+        Disposant de vingt-six (26) autobus comme <br> parc automobile reparti entre deux axes
+        : Bamako-Dakar, Bamako-Niamey en passant par Gao. <br> Pour mener à bien ses activités, la société s’est doté d’un personnel administratif (chef d’escales, <br> comptables, contrôleurs, guichetier, chargeur) , et d’un personnel mécanique (chauffeurs, mécaniciens, apprentis). <br> Pour le moment elle 
+        dispose de 19 escales (3 à Bamako, Ségou, San, Sévaré,Douentza, <br> Hombori, Boni, Gossi,Gao, Ansongo, Ayerou,Niamey, Diéma, Kayes, Diboli, Kaolack, Dakar) <br> et envisage dans l’avenir des nouvelles escales à l’intérieur du pays 
+        (Koutiala,…) ainsi que dans les sous-régions <br> (Lomé, Ghana ,…)en fonction de l’agrandissement de son parc automobile.Son côté commerce, elle se focalise sur le ‘’thé Antilope’’ <br> de la chine vers les autres destinations selon la demande et les BTP s’occupent des marchés étatiques ou privés sur constructions <br> routes, bâtiments, puits etc…, ainsi que del’hydrocarbure avec une station à Gao. Courant l’année 2015
+        la société, grâce aux flux <br> de la clientèle, a élargi non seulement son parc automobile avec l’achat des nouveaux bus MCV et aussi  <br> de nouvelles destinations telles que la Côte d’ivoire (Abidjan, Yamoussoukro, 
+        Bouaké, Ouangolo, Pogo…),</H4>
+     </div>
+     <div class="bloc2">
+      Réservation  par téléphone:   (+223) 74 00 4747
     </div>
-    <div id="pa">
-    <p>OUVERTURE D'UN NOUVEL AXE :<br>BAMAKO-MOPTI</p> </div>
+     <div class="plane">
+       <li><img src="nour.jpg" width="99px" height="98px" alt=""></li>
+       <li> A PROPOS</li>
+       <li> SERVICES</li>
+       <li> AXES ROUTIERS</li>
+       <li> CONTACT</li> 
+      </div>
+     <div class="societe">
+      ADMINISTRATION
+  <div class="pictures">
+    <img src="DGA.jpg" alt="" width="80%">
+    <img src="DIALLO.jpg" alt="" width="80%">
+  </div>
+  <div class="pit2">
+    <img src="Leon.jpg" alt="" width="90%">
+    <img src="DICKO.jpg" alt="" width="90%">
+  </div>
+   <div class="ad">
+    <h4> L'EQUIPE ADMINISTRATIVE DE NOUR VOYAGE</H4>
+   </div> 
     </div>
+  </div>
+  <div class="piedpage">
+     <p id="pai">PAIEMENTS</p>
+     <p id="actu">DERNIÈRES ACTUS</p>
+     <p id="conf">CGV & CONFIDENTIALITÉ</p>
+     <div class="pic">
+       <img src="Tombouctou.jpg" alt="" id="tomb">
+       <img src="Mopti.jpg" alt="" id="mopt">
+       <img src="PAIEMENT-ORANGE-MONEY.png" alt="" id="oran">
+       <p id="axe">OUVERTURE D’UN NOUVEL AXE: <br> BAMAKO-TOMBOUTOU-BAMAKO</p>
+       <P id="axe2">OUVERTURE D’UN NOUVEL AXE: <br> BAMAKO-MOPTI-BAMAKO</P>
+       <p id="condi">Conditions Générales </p> <br>
+       <p id="cook">
+         Confidentialités et Cookies </p>
+     </div>
+     </div>
+</div>  
+
 </body>
 </html>
